# xiaohongshu-crawler

./: .gitignore  README.md  main.py  pyproject.toml
courseware/: 01-m3u8流媒体数据获取.pptx  02-图书数据爬取.pptx  03-反爬虫技术应对.pptx  04-社交媒体数据获取.pptx
docs/: project_overview.md  第一次实验-第1个PPT操作说明.md  第三次实验-第3个PPT操作说明.md  第二次实验-第2个PPT操作说明.md  第四次实验-小红书实施步骤.md  第四次实验-第4个PPT任务梳理.md
exp1_m3u8/: m3u8_downloader.py
exp2_scrapy/: celery_app.py  docker-compose.yml  run_celery_task.py  seed_redis.py
exp2_scrapy/book_crawler/: items.py  pipelines.py  settings.py
exp2_scrapy/book_crawler/spiders/: books.py
exp3_anti_crawl/anti_crawl_lab/: client_demo.py  mock_site.py
exp4_social_media/: test_explore_parser.py
exp4_social_media/delivery/1-程序代码/: pyproject.toml
exp4_social_media/delivery/1-程序代码/config/: xiaohongshu.example.json
exp4_social_media/delivery/1-程序代码/social_media_crawler/: captcha_solver.py  storage.py  task_queue.py  xhs_detail_enricher.py  xhs_feed_client.py  xhs_manual_client.py
exp4_social_media/delivery/2-实验报告/: 社媒爬取-姓名-学号.docx
exp4_social_media/reports/social_media_lab/: reference.docx  社媒爬取-姓名-学号.md
exp4_social_media/scripts/: discover_seeds.py  merge_with_project_ffmpeg.py  parallel_enrich.py  run_crawl.py
exp4_social_media/social_media_crawler/: README.md
exp4_social_media/social_media_crawler/config/: config.example.json
exp4_social_media/social_media_crawler/data/: xhs_user_queue.example.txt
exp4_social_media/social_media_crawler/src/: client.py  models.py  statistics.py  xhs_parser.py  zemail.py
(+5 files in other folders)
