[project]
name = "data-crawler"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "cairosvg>=2.9.0",
    "celery>=5.6.3",
    "drissionpage>=4.1.1.4",
    "imageio-ffmpeg>=0.6.0",
    "pymongo>=4.17.0",
    "redis>=8.0.1",
    "reportlab>=5.0.0",
    "requests>=2.34.2",
    "scrapy>=2.17.0",
    "scrapy-redis>=0.9.1",
    "svglib>=2.0.2",
]
